# python_advanced_diploma

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  Procfile  README.md  Vagrantfile  docker-compose.yml  lint.sh  pyproject.toml  pytest.ini  requirements.txt
ansible_scripts/provision/: create-tweetty-app.yml  install-docker-compose.yml  install-docker.yml  install-dokku.yml  install-gitlab-runner.yml  install-gitlab.yml  install-nginx.yml  provision-backend.yml  provision-dev.yml  provision-frontend.yml  provision-gitlab.yml  provision-null.yml
ansible_scripts/provision/conf/frontend/nginx/: default.conf
ansible_scripts/provision/conf/frontend/web/: index.html
ansible_scripts/provision/conf/frontend/web/css/: app.45d81840.css  chunk-0420bcc4.d6bc3184.css  chunk-10e0d5b4.130d80ef.css  chunk-6f77c742.8d9a3d9c.css  chunk-732a3e8c.6334cd6b.css  chunk-vendors.de691de6.css
ansible_scripts/provision/conf/frontend/web/js/: app.7c9275be.js  app.7c9275be.js.map  chunk-0420bcc4.11441662.js  chunk-0420bcc4.11441662.js.map  chunk-10e0d5b4.e80e67b6.js  chunk-10e0d5b4.e80e67b6.js.map  chunk-6f77c742.f09861a7.js  chunk-6f77c742.f09861a7.js.map  chunk-732a3e8c.57e36fb4.js  chunk-732a3e8c.57e36fb4.js.map  chunk-76301fe8.cc56c3b1.js  chunk-76301fe8.cc56c3b1.js.map  chunk-vendors.398321e0.js  chunk-vendors.398321e0.js.map
ansible_scripts/provision/templates/: nginx.conf.j2
conf/: app.json
docs/presentation/: Презентация Салтыков В.С.docx  Презентация Салтыков В.С.pptx
requirements/: base.txt  ci.txt  dev.txt  prod.txt
tweetty/: __init__.py  main.py  settings.py  shortcuts.py  typing.py
tweetty/api/: __init__.py  auth.py  exception_handlers.py  exceptions.py  models.py  static.py
tweetty/api/routers/: __init__.py  medias.py  tweets.py  users.py
tweetty/db/: models.py  pg.py
tweetty/migrations/: env.py
tweetty/migrations/versions/: 91e31feddc9e_init_migration.py
tweetty/tests/: conftest.py
tweetty/tests/api/: __init__.py  test_follows.py  test_likes.py  test_medias.py  test_tweets.py  test_users.py
tweetty/tests/db/: test_follower_db_model.py  test_like_db_model.py  test_pg_utils.py  test_tweet_db_model.py  test_tweet_media_db_model.py  test_user_db_model.py  utils.py
tweetty/tests/tweetty_cli/: conftest.py  test_tweetty_cli.py
tweetty/tweetty_cli/: db.py  main.py  main.sh  users.py
twetty/: alembic.ini
twetty/db/: models.py  pg.py
twetty/migrations/: env.py
twetty/tests/: conftest.py  test_follower_db_model.py  test_like_db_model.py  test_pg_utils.py  test_tweet_db_model.py  test_tweet_media_db_model.py  test_user_db_model.py  utils.py
