[tool.poetry]
name="tweetty"
version="0.7.0"

[tool.mypy]
ignore_missing_imports=true
no_site_packages=true
check_untyped_defs=true
exclude="^tweetty/migrations"

[tool.isort]
line_length=120
include_trailing_comma=true
group_by_package=true
skip=["tweetty/migrations"]

[tool.semantic_release]
branch="master"
version_variable="tweetty/__init__.py:__version__"
version_toml="pyproject.toml:tool.poetry.version"
major_on_zero=false
upload_to_pypi=false
upload_to_repository=false
build_command=false
hvcs="gitlab"
hvcs_domain="gitlab.skillbox.ru"
hvcs_api_domain="gitlab.skillbox.ru/api/v4"
tag_format="{version}"

[tool.pytest.ini_options]
markers=[
    "tweets: test work with tweets",
    "post_tweets: test publish new tweets",
    "delete_tweets: test delete tweets",
    "post_medias: test publish media-files",
    "likes: test work with likes",
    "post_likes: test add likes to tweets",
    "delete_likes: test delele likes",
    "follows: test work with follows",
    "post_follows: test follow to user",
    "delete_follows: test unfollow from user",
]
