[tool.poetry]
name="tweetty"
version="0.11.0"

[tool.mypy]
ignore_missing_imports=true
no_site_packages=true
check_untyped_defs=true
exclude="^tweetty/migrations"

[tool.isort]
line_length=120
include_trailing_comma=true
group_by_package=true
skip=["tweetty/migrations"]

[tool.semantic_release]
branch="master"
version_variable="tweetty/__init__.py:__version__"
version_toml="pyproject.toml:tool.poetry.version"
major_on_zero=false
upload_to_pypi=false
upload_to_repository=false
build_command=false
hvcs="gitlab"
hvcs_domain="gitlab.skillbox.ru"
hvcs_api_domain="gitlab.skillbox.ru/api/v4"
tag_format="{version}"

[tool.pytest.ini_options]
markers=[
    "tweets: test work with tweets",
    "get_tweets: test get tweets",
    "post_tweet: test publish new tweet",
    "delete_tweet: test delete tweet",
    "medias: test work with medias",
    "post_media: test publish media-file",
    "likes: test work with likes",
    "post_like: test add like to tweet",
    "delete_like: test delele like",
    "users: test work with users",
    "get_user: test get user",
    "follows: test work with follows",
    "post_follow: test follow to user",
    "delete_follow: test unfollow from user",
    "db: test work with database",
    "db_models: test SA models",
    "follower_db_model: test Follower database model",
    "like_db_model: test Like database model",
    "tweet_db_model: test Tweet database model",
    "tweet_media_db_model: test TweetMedia database model",
    "user_db_model: test User database model",
    "cli: test work with tweetty_cli"
]
